Support League Flysystem v2/v3

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,10 @@
+includes:
+    - vendor/phpstan/phpstan-mockery/extension.neon
+
 parameters:
     level: max
     paths:
         - src
         - tests
+    ignoreErrors:
+        - '#unction GuzzleHttp\\Psr7\\stream_for not found.#'
