--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,8 +5,6 @@ on:
   push:
     branches:
       - master
-  schedule:
-    - cron: '0 0 * * *'
 
 jobs:
   tests:
@@ -17,6 +15,11 @@ jobs:
       matrix:
         php: [7.2, 7.3, 7.4, 8.0, 8.1]
         stability: [lowest, highest]
+        mock: [true]
+        include:
+          - php: 8.1
+            stability: highest
+            mock: false
 
     name: PHP ${{ matrix.php }} - ${{ matrix.stability }}
 
@@ -40,6 +43,11 @@ jobs:
           dependency-versions: ${{ matrix.stability }}
 
       - name: Execute tests
+        env:
+          ALIBABA_CLOUD_KEY: ${{ secrets.ALIBABA_CLOUD_KEY }}
+          ALIBABA_CLOUD_SECRET: ${{ secrets.ALIBABA_CLOUD_SECRET }}
+          ALIBABA_CLOUD_BUCKET: ${{ secrets.ALIBABA_CLOUD_BUCKET }}
+          MOCK: ${{ matrix.mock }}
         run: composer run-script test:phpunit -- --coverage-clover coverage.xml
 
       - name: Upload coverage to Codecov
