--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,12 @@
 {
-    "name": "zing/package-skeleton-php",
-    "description": "A skeleton repository for PHP Packages",
-    "keywords": ["php", "package", "skeleton"],
+    "name": "zing/flysystem-oss",
+    "description": "Flysystem adapter for the OSS SDK",
+    "keywords": ["flysystem", "oss"],
     "license": "MIT",
-    "homepage": "https://github.com/zingimmick/package-skeleton-php",
-    "support": {
-        "issues": "https://github.com/zingimmick/package-skeleton-php/issues",
-        "source": "https://github.com/zingimmick/package-skeleton-php"
-    },
     "authors": [
         {
             "name": "zingimmick",
-            "email": "zingimmick@outlook.com",
-            "homepage": "https://github.com/zingimmick"
+            "email": "zingimmick@outlook.com"
         }
     ],
     "config": {
@@ -23,21 +17,27 @@
         }
     },
     "require": {
-        "php": "^7.2 || ^8.0"
+        "php": "^7.2 || ^8.0",
+        "ext-json": "*",
+        "aliyuncs/oss-sdk-php": "^2.4",
+        "guzzlehttp/psr7": "^1.7 || ^2.0",
+        "league/flysystem": "^2.0 || ^3.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.0",
+        "league/flysystem-adapter-test-utilities": "^2.0 || ^3.0",
+        "mockery/mockery": "~1.3.3 || ^1.4.2",
+        "phpstan/phpstan-mockery": "^1.0",
         "phpunit/phpunit": "^8.0,<8.5.12 || ^9.3.3",
-        "zing/coding-standard": "^5.1"
+        "zing/coding-standard": "^5.2"
     },
     "autoload": {
         "psr-4": {
-            "Zing\\Skeleton\\": "src"
+            "Zing\\Flysystem\\Oss\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Zing\\Skeleton\\Tests\\": "tests"
+            "Zing\\Flysystem\\Oss\\Tests\\": "tests"
         }
     },
     "scripts": {
