Skip access offset check

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -8,3 +8,4 @@ parameters:
         - tests
     ignoreErrors:
         - '#unction GuzzleHttp\\Psr7\\stream_for not found.#'
+        - "#Cannot access offset 'x-oss-object-acl' on mixed.#"
