--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,9 @@
         "ext-json": "*",
         "aliyuncs/oss-sdk-php": "^2.4.3",
         "guzzlehttp/psr7": "^1.7 || ^2.0",
-        "league/flysystem": "^2.0 || ^3.0"
+        "league/flysystem": "^1.0"
     },
     "require-dev": {
-        "league/flysystem-adapter-test-utilities": "^2.0 || ^3.0",
         "mockery/mockery": "~1.3.3 || ^1.4.2",
         "phpstan/phpstan-mockery": "^1.0",
         "phpunit/phpunit": "^8.0,<8.5.12 || ^9.3.3",
@@ -49,8 +48,7 @@
         "test:phpunit": "phpunit --colors=always",
         "lint": [
             "@lint:rector",
-            "@lint:ecs",
-            "@lint:phpstan"
+            "@lint:ecs"
         ],
         "fix": [
             "@fix:rector",
