--- a/.github/workflows/rector.yml
+++ b/.github/workflows/rector.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/checkout@v2.4.0
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - if: github.event.pull_request.head.repo.full_name != github.repository
         name: Checkout code
@@ -28,7 +30,7 @@ jobs:
       - run: vendor/bin/ecs check --fix --ansi
 
       - if: github.event.pull_request.head.repo.full_name == github.repository
-        uses: EndBug/add-and-commit@v8.0.1
+        uses: EndBug/add-and-commit@v8
         with:
           add: .
           message: "Rector Rectify"
