--- a/composer.json
+++ b/composer.json
@@ -23,17 +23,17 @@
         }
     },
     "require": {
-        "php": "^7.2 || ^8.0",
+        "php": "^8.0",
         "ext-json": "*",
         "aliyuncs/oss-sdk-php": "^2.4.3",
         "guzzlehttp/psr7": "^1.7 || ^2.0",
-        "league/flysystem": "^2.0 || ^3.0"
+        "league/flysystem": "^3.6"
     },
     "require-dev": {
-        "league/flysystem-adapter-test-utilities": "^2.0 || ^3.0",
+        "league/flysystem-adapter-test-utilities": "^3.6",
         "mockery/mockery": "~1.3.3 || ^1.4.2",
         "phpstan/phpstan-mockery": "^1.0",
-        "phpunit/phpunit": "^8.0,<8.5.12 || ^9.3.3",
+        "phpunit/phpunit": "^9.3.3",
         "zing/coding-standard": "^6.4"
     },
     "autoload": {
