Use latest PHP version for test

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
         stability: [lowest, highest]
         mock: [true]
         include:
-          - php: 8.1
+          - php: latest
             stability: highest
             mock: false
 
